# clickscript

clickscript/: README.md  pyproject.toml
clickscript/src/: clickOn.py
